# Solver_SCP

./: .gitignore  README.md  pyproject.toml
BD/: resultados_scp.db
Metaheuristics/: MS-ALEX  MSA.py
Solver/: solverB.py  solverSCP.py
