[tool.poetry]
name = "solver-scp"
version = "0.1.0"
description = ""
authors = ["Felipe Cisternas Caneo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23,<2.0"
scipy = ">=1.8,<2.0"
matplotlib = ">=3.5,<4.0"
pandas = ">=1.4,<2.0"
seaborn = ">=0.11,<1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
